--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "^16.11.12",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "antd": "^4.20.0",
     "irreguitar-pkg": "^0.2.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -60,6 +61,7 @@
     "@storybook/node-logger": "^6.4.18",
     "@storybook/preset-create-react-app": "^4.0.1",
     "@storybook/react": "^6.4.18",
+    "@types/antd": "^1.0.0",
     "chromatic": "^6.4.3",
     "webpack": "^5.68.0"
   }
