--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "tone": "^14.7.77",
     "typescript": "^4.6.3"
   },
   "scripts": {
